added enums and default values for some parameters in the swagger doc
